# collaboflow-file-backup-lambda

./: Cargo.toml  LICENSE  README.md
src/: collaboflow.rs  main.rs  s3.rs
